hphp/test/slow/parser/afl5934248.php.expectf
Fatal error: A .php file must begin with '<?hh'. in %s/test/slow/parser/afl5934248.php on line 1
